--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "jest": "^26.6.3"
+    "jest": "^26.6.3",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "test": "jest"
