--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
+    "@semantic-release/git": "^9.0.0",
     "jest": "^26.6.3",
+    "semantic-release": "^17.3.0",
     "uuid": "^8.3.1"
   },
   "scripts": {
