--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": false,
   "devDependencies": {
     "@semantic-release/git": "^9.0.0",
+    "fs-extra": "^10.0.0",
     "jest": "^26.6.3",
     "semantic-release": "^17.3.0",
     "uuid": "^8.3.1"
