--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,9 @@ jobs:
       run: python -m pip install --upgrade setuptools wheel twine
     - name: Install Node.js modules
       run: yarn install
+    - name: Lint
+      run: yarn lint
     - name: Run tests
       env:
         TESTPYPI_TOKEN: ${{ secrets.TESTPYPI_TOKEN }}
-      run: yarn jest
+      run: yarn test
