--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
   "private": false,
   "devDependencies": {
     "@semantic-release/git": "^9.0.0",
+    "eslint": "^8.7.0",
+    "eslint-plugin-jest": "^25.7.0",
     "fs-extra": "^10.0.0",
     "jest": "^26.6.3",
     "semantic-release": "^17.3.0",
     "uuid": "^8.3.1"
   },
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint lib test"
   },
   "dependencies": {
     "execa": "^4.1.0",
