--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,16 +1,26 @@
 {
+    "parser": "@typescript-eslint/parser",
+    "parserOptions": {
+        "ecmaVersion": 2021,
+        "project": "tsconfig.json",
+        "sourceType": "module"
+    },
     "env": {
         "node": true,
-        "commonjs": true,
         "jest": true
     },
-    "extends": "eslint:recommended",
-    "plugins": ["jest"],
-    "parserOptions": {
-        "ecmaVersion": "latest"
-    },
+    "extends": [
+        "plugin:@typescript-eslint/recommended",
+        "plugin:prettier/recommended"
+    ],
+    "root": true,
+    "plugins": [
+        "@typescript-eslint/eslint-plugin",
+        "jest",
+        "prettier"
+    ],
     "rules": {
+        "@typescript-eslint/no-explicit-any": "off"
     },
-    "globals": {
-    }
+    "globals": {}
 }
