--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,10 +15,10 @@ jobs:
     strategy:
       matrix:
         node-version: [18.x, 20.x]
-        python-version: [3.9.x, 3.10.x, 3.11.x]
+        python-version: [3.8.x, 3.11.x]
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
     - name: Setup Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v3
       with:
@@ -33,6 +33,8 @@ jobs:
       run: yarn install
     - name: Lint
       run: yarn lint
+    - name: Build
+      run: yarn build
     - name: Run tests
       env:
         TESTPYPI_TOKEN: ${{ secrets.TESTPYPI_TOKEN }}
