--- a/package.json
+++ b/package.json
@@ -2,23 +2,37 @@
   "name": "semantic-release-pypi",
   "version": "2.5.2",
   "description": "semantic-release plugin to publish a python package to PyPI",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "repository": "https://github.com/abichinger/semantic-release-pypi",
   "author": "Andreas Bichinger",
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "@semantic-release/git": "^9.0.0",
-    "eslint": "^8.7.0",
+    "@types/jest": "^29.5.5",
+    "@types/uuid": "^9.0.4",
+    "@typescript-eslint/eslint-plugin": "^6.7.4",
+    "@typescript-eslint/parser": "^6.7.4",
+    "copyfiles": "^2.4.1",
+    "eslint": "8.50.0",
+    "eslint-config-prettier": "9.0.0",
     "eslint-plugin-jest": "^25.7.0",
+    "eslint-plugin-prettier": "5.0.0",
     "fs-extra": "^10.0.0",
-    "jest": "^26.6.3",
+    "jest": "^29.7.0",
+    "prettier": "^3.0.3",
+    "rimraf": "^5.0.5",
     "semantic-release": "^17.3.0",
+    "ts-jest": "^29.1.1",
+    "typescript": "^5.2.2",
     "uuid": "^8.3.1"
   },
   "scripts": {
+    "build": "yarn clean && tsc --project tsconfig.build.json && yarn copy",
     "test": "jest",
-    "lint": "eslint lib test"
+    "lint": "eslint lib/*.ts test/*.ts",
+    "clean": "rimraf dist/",
+    "copy": "copyfiles -u 1 lib/verifySetup.py dist"
   },
   "dependencies": {
     "execa": "^4.1.0",
@@ -26,8 +40,7 @@
     "got": "^11.8.0"
   },
   "files": [
-    "index.js",
-    "lib/*",
+    "dist/*",
     "requirements.txt"
   ],
   "keywords": [
