feat: support pyproject.toml #26
- fallback to setup.py if pyproject.toml is not inside srcDir
- Use tomlkit to update version inside pyproject.toml
- Update README

BREAKING CHANGE: replaced option setupPy with srcDir

--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
     "build": "yarn clean && tsc --project tsconfig.build.json && yarn copy",
     "test": "jest",
     "lint": "eslint lib/*.ts test/*.ts",
-    "clean": "rimraf dist/",
-    "copy": "copyfiles -u 1 lib/verifySetup.py dist"
+    "clean": "rimraf dist/ && rimraf .tmp/",
+    "copy": "copyfiles -u 1 lib/py/*.py dist"
   },
   "dependencies": {
     "execa": "^4.1.0",
