--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,7 +31,7 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Python packages
-      run: python -m pip install --upgrade setuptools wheel twine
+      run: pip3 install -r lib/py/requirements.txt
     - name: Install Node.js modules
       run: yarn install
     - name: Lint
