--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
-    "semantic-release": "^17.3.0",
+    "semantic-release": "^22.0.5",
+    "@semantic-release/git": "^10.0.1",
     "ts-jest": "^29.1.1",
     "typescript": "^5.2.2",
     "uuid": "^8.3.1"
