--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,14 +2,11 @@ name: Test
 
 on:
   push:
-    branches:
+    branches-ignore:
       - main
       - beta
-      - next
-      - develop
   pull_request:
-    branches:
-      - main
+  workflow_call:
 
 jobs:
   test:
@@ -23,11 +20,11 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: Setup Node.js ${{ matrix.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ matrix.node-version }}
     - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
     - name: Install Python packages
