feat(options): add envDir and installDeps
refactor: pass execa.Options instead of Context to most functions,
make tsconfig more strict

BREAKING CHANGE: create venv

The new default behaviour of this plugin is to create a virtual environment before installing the python dependencies

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,11 @@
 {
     "compilerOptions": {
-        "module": "NodeNext",
-        "target": "ESNext",
-        "moduleResolution": "NodeNext",
-        "esModuleInterop": true,
+        "module": "ESNext",
+        "target": "ES2016",
+        "moduleResolution": "Bundler",
         "declaration": true,
         "strict": true,
+        "allowJs": true,
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "allowSyntheticDefaultImports": true,
@@ -13,16 +13,8 @@
             "node",
             "jest",
         ],
-        "allowJs": true,
-        "removeComments": false,
-        "noLib": false,
         "skipLibCheck": true,
-        "exactOptionalPropertyTypes": false,
-        "noImplicitReturns": true,
         "alwaysStrict": true,
-        "strictBindCallApply": true,
-        "strictPropertyInitialization": false,
-        "strictNullChecks": false,
         "sourceMap": true,
         "outDir": "dist",
     },
