--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "semantic-release-pypi",
   "version": "3.0.2",
   "description": "semantic-release plugin to publish a python package to PyPI",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "repository": "https://github.com/abichinger/semantic-release-pypi",
@@ -9,34 +10,34 @@
   "license": "MIT",
   "private": false,
   "devDependencies": {
-    "@types/jest": "^29.5.5",
+    "@semantic-release/git": "^10.0.1",
+    "@types/jest": "^29.5.13",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "copyfiles": "^2.4.1",
     "eslint": "8.50.0",
     "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-jest": "^25.7.0",
+    "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-prettier": "5.0.0",
     "fs-extra": "^10.0.0",
     "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "semantic-release": "^22.0.5",
-    "@semantic-release/git": "^10.0.1",
-    "ts-jest": "^29.1.1",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.2.2",
     "uuid": "^8.3.1"
   },
   "scripts": {
     "build": "yarn clean && tsc --project tsconfig.build.json && yarn copy",
-    "test": "jest",
+    "test": "NODE_OPTIONS='$NODE_OPTIONS --experimental-vm-modules' jest",
     "lint": "eslint lib/*.ts test/*.ts",
     "clean": "rimraf dist/ && rimraf .tmp/",
     "copy": "copyfiles -u 1 lib/py/* dist"
   },
   "dependencies": {
-    "execa": "^4.1.0",
+    "execa": "^9.4.1",
     "form-data": "^3.0.0",
     "got": "^11.8.0"
   },
