--- a/package.json
+++ b/package.json
@@ -11,27 +11,24 @@
   "private": false,
   "devDependencies": {
     "@semantic-release/git": "^10.0.1",
-    "@types/jest": "^29.5.13",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
     "copyfiles": "^2.4.1",
     "eslint": "8.50.0",
     "eslint-config-prettier": "9.0.0",
-    "eslint-plugin-jest": "^28.8.3",
     "eslint-plugin-prettier": "5.0.0",
     "fs-extra": "^10.0.0",
-    "jest": "^29.7.0",
     "prettier": "^3.0.3",
     "rimraf": "^5.0.5",
     "semantic-release": "^22.0.5",
-    "ts-jest": "^29.2.5",
     "typescript": "^5.2.2",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "vitest": "^2.1.3"
   },
   "scripts": {
     "build": "yarn clean && tsc --project tsconfig.build.json && yarn copy",
-    "test": "NODE_OPTIONS='$NODE_OPTIONS --experimental-vm-modules' jest",
+    "test": "vitest",
     "lint": "eslint lib/*.ts test/*.ts",
     "clean": "rimraf dist/ && rimraf .tmp/",
     "copy": "copyfiles -u 1 lib/py/* dist"
