--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,6 @@
         "allowSyntheticDefaultImports": true,
         "types": [
             "node",
-            "jest",
         ],
         "skipLibCheck": true,
         "alwaysStrict": true,
@@ -21,5 +20,6 @@
     "include": [
         "lib/**/*",
         "test/**/*.ts",
+        "vitest.config.ts"
     ],
 }
