--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": false,
   "devDependencies": {
     "@semantic-release/git": "^10.0.1",
+    "@types/node": "^22.7.7",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
     "@typescript-eslint/parser": "^6.7.4",
@@ -36,7 +37,7 @@
   "dependencies": {
     "execa": "^9.4.1",
     "form-data": "^3.0.0",
-    "got": "^11.8.0"
+    "got": "^12.6.1"
   },
   "files": [
     "dist/*",
