--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": false,
   "devDependencies": {
     "@semantic-release/git": "^10.0.1",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^22.7.7",
     "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.4",
@@ -37,7 +38,9 @@
   "dependencies": {
     "execa": "^9.4.1",
     "form-data": "^3.0.0",
-    "got": "^12.6.1"
+    "got": "^12.6.1",
+    "lodash": "^4.17.21",
+    "smol-toml": "^1.3.1"
   },
   "files": [
     "dist/*",
