--- a/lib/py/requirements.txt
+++ b/lib/py/requirements.txt
@@ -1,7 +1,6 @@
-pip~=23.2
-build~=1.0
-setuptools~=68.2
-twine>=5.1.1,<6
-tomlkit~=0.12
+build~=1.2
+setuptools~=78.1
+twine~=6.1
+tomlkit~=0.13
 packaging~=24.0
-hatch~=1.13.0
+hatch~=1.14
